--- a/vue3-demo/home/package.json
+++ b/vue3-demo/home/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@babel/core": "^7.11.0",
-    "@vue/compiler-sfc": "3.2.6",
+    "@vue/compiler-sfc": "^3.0.11",
     "babel-loader": "^8.1.0",
+    "faker": "^5.5.3",
     "serve": "^12.0.0",
     "vue": "^3.0.11"
   },
@@ -24,6 +25,7 @@
     "url-loader": "4.1.1",
     "vue-loader": "16.5.0",
     "webpack": "5.52.1",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "4.8.0",
     "webpack-dev-server": "4.2.0"
   }
